--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 archive.zip filter=lfs diff=lfs merge=lfs -text
+greenball_dataset.zip filter=lfs diff=lfs merge=lfs -text
