--- a/runs/detect/train5/args.yaml
+++ b/runs/detect/train5/args.yaml
@@ -2,7 +2,7 @@ task: detect
 mode: train
 model: yolov8n.pt
 data: combined_greenball/data.yaml
-epochs: 50
+epochs: 5
 time: null
 patience: 100
 batch: 16
@@ -10,7 +10,7 @@ imgsz: 640
 save: true
 save_period: -1
 cache: false
-device: null
+device: cpu
 workers: 8
 project: null
 name: train5
